--- a/WebRadar/templates/index.html
+++ b/WebRadar/templates/index.html
@@ -2,26 +2,92 @@
 <html>
 
     <head>
-        <meta http-equiv="contemt-type" content="text/html" charset="utf-8">
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Radar Scan</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='/css/style.css') }}">
         <link rel="stylesheet" href="/static/css/style.css">
     </head>
+
     <body>
         <div class="radar">
-            <div class="angle-marker zero">0°</div>
-            <div class="angle-marker ninety">90°</div>
-            <div class="angle-marker one-eighty">180°</div>
-            <div class="angle-marker two-seventy">270°</div>
+            <div class="direction direction-left">0°</div>
+            <div class="direction direction-top">90°</div>
+            <div class="direction direction-right">180°</div>
+            <div class="direction direction-bottom">270°</div>
         </div>
-        <div class="container">
-            <div class="time" id="Time"></div>
-            <div class="radar-dimensions" id="radarDimensions"></div>
-            <div class="radar-angle" id="radarAngle"></div>
-            <div class="radar-center" id="radarCenter"></div>
-        </div>
+        <div class="current-time" id="currentTime"></div>
+        <div class="scan-range" id="scanRange"></div>
+        <div class="scan-center" id="ScanCenter"></div>
+        <div class="target" id="target"></div>
+        <div class="target-distance" id="TargetDistance"></div>
+        <div class="target-angle" id="TargetAngle"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
+        <script>
+            setInterval(function() {
+                displayTime();
+                displayScanCenter();
+                displayScanRange();
+            }, 1000);
+            function displayTime() {
+                var date = new Date();
+                var dateText = document.getElementById('currentTime');
+                dateText.innerHTML =  "当前时间: " + date.toLocaleDateString() + " " + date.toLocaleTimeString();
+            }
+            function displayScanRange() {
+                var ScanRange = document.getElementById('scanRange');
+                ScanRange.innerHTML = "扫描半径: " + "4000" + " mm";
+            }
+            function displayScanCenter() {
+                var radar = document.querySelector('.radar');
+                var radarRect = radar.getBoundingClientRect()
+                var radarCenterX = (radarRect.left + radarRect.width / 2).toFixed(1);
+                var radarCenterY = (radarRect.top + radarRect.height / 2).toFixed(1);
+                var ScanCenter = document.getElementById('ScanCenter');
+                ScanCenter.innerHTML = "扫描中心: " + radarCenterX + " x " + radarCenterY;
+            }
+            function displayTarget(distance, angle) {
+                // 获取雷达显示区域的位置和尺寸信息
+                var radar = document.querySelector('.radar');
+                var radarRect = radar.getBoundingClientRect();
+                
+                // 计算雷达显示区域的中心坐标点
+                var radarCenterX = (radarRect.left + radarRect.width / 2).toFixed(1);
+                var radarCenterY = (radarRect.top + radarRect.height / 2).toFixed(1);
+
+                // 将距离转换为相对于雷达界面的半径
+                var radius = distance / 4000 * (radarRect.width / 2);
+
+                // 使用三角函数计算目标点的坐标
+                var targetX = Number(radarCenterX) - Number(radius * Math.cos(angle * Math.PI / 180));
+                var targetY = Number(radarCenterY) - Number(radius * Math.sin(angle * Math.PI / 180));
+
+                // 打印雷达中心坐标
+                console.log("雷达中心坐标(X, Y):", radarCenterX, radarCenterY);
+                // 打印没有相加的目标点偏移量
+                console.log("目标点偏移量(X, Y):", radius * Math.cos(angle * Math.PI / 180), radius * Math.sin(angle * Math.PI / 180));
+                // 打印目标点坐标
+                console.log("目标点坐标(X, Y):", targetX, targetY);
+            
+                var target = document.getElementById('target');
+                var TargetDistance = document.getElementById('TargetDistance');
+                var TargetAngle = document.getElementById('TargetAngle');
+
+                TargetDistance.innerHTML = "目标距离: " + distance + " mm";
+                TargetAngle.innerHTML = "目标角度: " + angle + "°";
+
+                target.style.display = 'block';
+
+                target.style.left = (targetX - 4) + 'px';
+                target.style.top = (targetY - 5) + 'px';
+                
+            }
+            var socket = io();
+            socket.on('update_data', function (data) {
+                displayTarget(data.distance, data.angle);
+            });
+            
+        </script>
     </body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.min.js"></script>
-    <script src="/static/js/script.js"></script>
+
 </html>
