--- a/WebRadar/static/css/style.css
+++ b/WebRadar/static/css/style.css
@@ -14,16 +14,17 @@ body {
 }
 
 .radar {
-    width: calc(452px + 48px);
-    height: calc(452px + 48px);
+    width: calc(612px + 48px);
+    height: calc(612px + 48px);
     border: 1px solid;
     border-radius: 50%;
     position: relative;
+    top: 80px;
     background: 
         repeating-radial-gradient(
             transparent 0,
             transparent 30px,
-            #315e49 30px,
+            #2f916300 30px,
             #315e49 32px),
         linear-gradient(
             transparent 49.75%,
@@ -34,34 +35,41 @@ body {
         linear-gradient(
             90deg,
             transparent 49.75%,
-            #315e49 49.75%,
+            #1a5f3f00 49.75%,
             #315e49 50.25%,
             transparent 50.25%
         ),
-        linear-gradient(#000, #000);
-        left: 25%;
+        linear-gradient(#000, #228f46);
+        clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
 }
 .radar::before {
     content: "";
     position: absolute;
-    width: calc(452px / 2);
-    height: calc(452px / 2);
+    width: calc(652px / 2);
+    height: calc(654px / 2);
+    
+    border: 1px solid #315e49;
     background: linear-gradient(
-        45deg, 
-        rgba(0,0,0,0) 50%,
-        #00ff00 100%
+        225deg,
+        #03f703 10%,
+        rgba(7, 7, 7, 0) 100%
     );
+    
     border-radius: 100% 0 0 0;
-    top: calc(48px / 2);
-    left: calc(48px / 2);
-    animation: scanning 2s linear infinite;
+    animation: rotate-scan-line 3s linear infinite alternate;
     transform-origin: 100% 100%;
+    clip-path: polygon(0% 50%, 0% 100%, 100% 100%);
+    
 }
-@keyframes scanning {
+@keyframes rotate-scan-line {
+    from {
+        transform: rotate(0deg);
+    }
     to {
-        transform: rotate(360deg);
+        transform: rotate(154deg);
     }
 }
+
 
 .direction {
     position: absolute;
@@ -71,26 +79,20 @@ body {
 }
 
 .direction-top {
-    top: -20px;
-    left: 51%;
-    transform: translateX(-50%);
-}
-
-.direction-bottom {
-    bottom: -20px;
+    top: -1px;
     left: 51%;
     transform: translateX(-50%);
 }
 
 .direction-left {
-    top: 50%;
-    left: -20px;
+    top: 49%;
+    left: -0px;
     transform: translateY(-50%);
 }
 
 .direction-right {
-    top: 50%;
-    right: -35px;
+    top: 49%;
+    right: -8px;
     transform: translateY(-50%);
 }
 
@@ -123,26 +125,6 @@ body {
     border-radius: 5px;
     color: #358c35;
 }
-.target-distance {
-    position: absolute;
-    top: 140px;
-    left: 20px;
-    background-color: rgba(32, 162, 60, 0);
-    padding: 10px;
-    border-radius: 5px;
-    color: #358c35;
-}
-.target-angle {
-    position: absolute;
-    top: 180px;
-    left: 20px;
-    background-color: rgba(32, 162, 60, 0);
-    padding: 10px;
-    border-radius: 5px;
-    color: #358c35;
-}
-
-
 .target {
     display: none;
     position: absolute;
@@ -150,4 +132,22 @@ body {
     height: 5px;
     background-color: red;
     border-radius: 50%;
+}
+Table {
+    position: absolute;
+    top: 140px;
+    left: 20px;
+    background-color: rgba(32, 162, 60, 0);
+    padding: 5px;
+    border: 1px dashed #39753f;
+}
+th, td {
+    text-align: left;
+    font-size: 15px;
+    color: #358c35;
+    font-family: "宋体";
+}
+th:not(:last-child),
+td:not(:last-child) {
+    padding-right: 100px;
 }
