--- a/WebRadar/static/css/style.css
+++ b/WebRadar/static/css/style.css
@@ -13,6 +13,16 @@ body {
     background: radial-gradient(circle at center, #465943, #000);
 }
 
+h1 {
+    color: #358c35;
+    text-align: center;
+    margin-bottom: 20px;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
 .radar {
     width: calc(612px + 48px);
     height: calc(612px + 48px);
@@ -42,6 +52,7 @@ body {
         linear-gradient(#000, #228f46);
         clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
 }
+
 .radar::before {
     content: "";
     position: absolute;
@@ -96,8 +107,6 @@ body {
     transform: translateY(-50%);
 }
 
-
-
 .current-time {
     position: absolute;
     top: 20px;
@@ -143,11 +152,53 @@ Table {
 }
 th, td {
     text-align: left;
-    font-size: 15px;
+    font-size: 14px;
     color: #358c35;
-    font-family: "宋体";
 }
 th:not(:last-child),
 td:not(:last-child) {
     padding-right: 100px;
+}
+
+.slider-container {
+    width: 200px;
+    margin: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.slider-container label {
+    color: #358c35;
+}
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 8px;
+    background: #3c6437;
+    outline: none;
+    opacity: 0.5;
+    transition: opacity .1s;
+}
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10px;
+    height: 8px;
+    background: #4CAF50;
+    cursor: pointer;
+    border-radius: 0;    
+}
+.slider::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    background: #4CAF50;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.slider:hover {
+    opacity: 0.8;
+}
+.slider:focus {
+    opacity: 1;
 }
