--- a/WebRadar/static/css/style.css
+++ b/WebRadar/static/css/style.css
@@ -53,34 +53,13 @@ h1 {
         clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
 }
 
-.radar::before {
-    content: "";
+.scanLineCanvas {
     position: absolute;
-    width: calc(652px / 2);
-    height: calc(654px / 2);
-    
-    border: 1px solid #315e49;
-    background: linear-gradient(
-        225deg,
-        #03f703 10%,
-        rgba(7, 7, 7, 0) 100%
-    );
-    
-    border-radius: 100% 0 0 0;
-    animation: rotate-scan-line 3s linear infinite alternate;
-    transform-origin: 100% 100%;
-    clip-path: polygon(0% 50%, 0% 100%, 100% 100%);
-    
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    /* border: 1px solid; */
 }
-@keyframes rotate-scan-line {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(154deg);
-    }
-}
-
 
 .direction {
     position: absolute;
@@ -134,6 +113,15 @@ h1 {
     border-radius: 5px;
     color: #358c35;
 }
+.scan-period {
+    position: absolute;
+    top: 100px;
+    left: 20px;
+    background-color: rgba(32, 162, 60, 0);
+    padding: 10px;
+    border-radius: 5px;
+    color: #358c35;
+}
 .target {
     display: none;
     position: absolute;
@@ -141,7 +129,37 @@ h1 {
     height: 5px;
     background-color: red;
     border-radius: 50%;
+    /* animation: pulse 1.9s infinite alternate; */
+    
 }
+/* .target::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    border-radius: 50%;
+    animation: blink 1.9s infinite alternate;
+}
+@keyframes pulse {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.5);
+    }
+}
+
+@keyframes blink {
+    from {
+        opacity: 0.5;
+    }
+
+    to {
+        opacity: 1;
+    }
+} */
 Table {
     position: absolute;
     top: 140px;
